--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/estilos.css">
+    <link rel="shortcut icon" href="./src/imagens/joy.png" type="image/x-icon">
     <title>Meu Portfolio </title>
 </head>
 
@@ -18,7 +19,7 @@
      <div class="minhas-informacoes">
         <img src="./src/imagens/eu.jpeg" width="96px"alt="foto-de-perfil">
         <h1 class="nome" >Layrton Silva</h1>
-        <h2 class="cargo">Desenvolvedor Front-End Junior</h2>
+        <h2 class="cargo">Desenvolvedor Front-End👨🏼‍💻</h2>
      </div>
       <div class="conteudo">
         <ul class="abas">
@@ -28,6 +29,9 @@
          <li class="aba" id="minhas-redes">
           <img src="./src/imagens/coracao.gif" alt="icone redes sociais">
          </li>
+         <li class="aba selecionado2" id="projetos">
+            <img src="./src/imagens/control2.gif" alt="icone de projetos">
+           </li>
         </ul>
        <div class="informacoes-abas">
        <div class="informacao selecionado" id="informacao-sobre-mim">
@@ -35,15 +39,14 @@
 
        <div class="descricao">
          <p>
-            Hi, my name is Layrton Silva. This is my professional portfolio
-         </p>
+            Oi, me chamo Layrton Silva.
+         </p> <br>
          <p>
-            Currently studying <span> HTML, CSS, JavaScript and React.</span> 
-            Passionate about technology and how things work 
-            (this was one of the reasons I fell in love with programming. 
-            I really enjoy communicating, learning new things and coffee.
-             23 years old from Brazil.
-
+           Estudando <span> JavaScript, Node e React.</span> <br>
+           Apaixonado por tecnologia e em aprender novas habilidades, 
+           iniciando minha carreira como Desenvolvedor e em 
+           busca da minha primeira oportunidade. <br>
+           Gosto de alguns games, R&B e café.
          </p>
         </div>
        </div>
@@ -51,14 +54,42 @@
         <h3 class="sub-titulo">Minha redes</h3>
         <ul  class="redes-sociais">
             <li>
-                <a href="https://drive.google.com/file/d/12CxFdtjGX-7pCHvdTv9DDlL0M7a3pM7H/view?usp=sharing" target="_blank" class="curriculo"> Meu currículo </a>
+                <a href="https://github.com/layrtonz" target="_blank" class="github">GitHub</a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/in/layrtonz/" target="_blank" class="linkedin"> LinkedIn</a>
             </li>
             <li>
-                <a href="https://github.com/layrtonz" target="_blank" class="github">GitHub</a>
+                <a href="https://drive.google.com/file/d/17sPBstJObaTIFUPPk-EgNh2niPRNUZzA/view?usp=share_link" target="_blank" class="curriculo"> Meu currículo </a>
             </li>
+        </ul>
+       </div>
+       <div class="informacao" id="informacao-projetos">
+        <h3 class="sub-titulo">Projetos</h3>
+        <div class="descricao-projeto">
+            <p>
+               Adicionarei mais projetos e atualizarei os que já estão aqui.
+            </p>
+        <ul  class="projetos"> <br>
+            <li>
+                <a href="https://layrtonz.github.io/Trailer-Mario/" target="_blank" class="front-mario"> Trailer Mario </a>
+            </li>
+            <li>
+                <a href="https://github.com/layrtonz/mini-portifolio" target="_blank" class="mini-portifolio">Mini Porftolio</a>
+            </li>
+            <li>
+                <a href="https://github.com/layrtonz/react-page1" target="_blank" class="github-page"> React Page</a>
+            </li>
+            <li>
+                <a href="https://loja-de-nfts.vercel.app" target="_blank" class="loja-nft">Loja de NFTS</a>
+            </li>
+            <li>
+                <a href="https://layrtonz.github.io/calendario-copa/" target="_blank" class="calendario">Calendário da Copa</a>
+            </li>
+            <li>
+                <a href="https://dark-mode-psi-ten.vercel.app" target="_blank" class="dark-mode">Dark Mode</a>
+            </li>
+            
         </ul>
        </div>
 
